--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL="postgresql://neondb_owner:npg_cdZls5n1geuY@ep-divine-grass-a1a8anxk-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
-NEWS_API="6dcd711e788444ada1201121f82f36d4"
+NEWS_API_KEY="6dcd711e788444ada1201121f82f36d4"
 
 # DATABASE_URL="postgresql://postgres:password@helium/heliumdb?sslmode=disable"
