--- a/server-python/requirements.txt
+++ b/server-python/requirements.txt
@@ -1,9 +1,15 @@
-fastapi>=0.100.0
+fastapi==0.95.2
 uvicorn[standard]>=0.20.0
-pydantic>=2.0.0
+pydantic==1.10.12
 sqlalchemy>=2.0.0
 psycopg2-binary
 alembic>=1.10.0
 python-multipart>=0.0.6
 python-dotenv>=1.0.0
 aiofiles>=23.0.0
+feedparser>=6.0.10
+httpx>=0.25.0
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+certifi>=2023.7.22
+newspaper3k==0.2.8
