--- a/server-python/requirements.txt
+++ b/server-python/requirements.txt
@@ -14,4 +14,6 @@ beautifulsoup4>=4.12.0
 requests>=2.31.0
 certifi>=2023.7.22
 trafilatura>=1.8.0
+googlenewsdecoder
+googlenewsdecoder>=1.0.0
 # 간단 버전에서는 불필요한 라이브러리 제거
